# py-kinetics-py

./: LICENSE  README.md  pyproject.toml
kinetics/: __init__.py
tests/: test_kinetics.py
